# git-cinnabar

./: .appveyor.yml  .gitignore  .gitmodules  .taskcluster.yml  .travis.yml  CI-hg-auth.py  CI-hg-serve-exec.py  CI.mk  Cargo.toml  GIT-VERSION.mk  Makefile  README  README.md  build.rs  cinnabar-fast-import.c  cinnabar-helper.c  configure  connect.c  deny.toml  download.py  fast-import.c.patch  git-cinnabar  git-cinnabar.py  git-hgdebug  git-remote-hg  git-remote-hg.py  hg-bundle.c  hg-bundle.h  hg-connect-http.c  hg-connect-stdio.c  hg-connect.c  hg-connect.h  ruff.toml  rustfmt.toml  sha1_file.c.patch
.cargo/: config.toml
.github/actions/decision/: action.yml
.github/actions/mounts/: action.yml
.github/actions/task/: action.yml
.github/workflows/: cargo-deny.yml  cargo-package.yml  ci.yml  env-tools.yml  python.yml  rust.yml  taskcluster.yml
.taskcluster/: decision.py  docker.py  msys.py  tasks.py  tools.py  variables.py
CI/: cargo.sh  decision.py  docker.py  filter.py  get_artifact.py  gha.py  git-transport-disconnect.diff  hg-serve-exec.py  macos.token.enc  msys.py  osx-10-10.token.enc  osx-10-11.token.enc  osx.py  osx.token.enc  package.mk  package.py  reject_new_heads.py  run.py  selfsigned.crt  selfsigned.key  start-worker.sh  tasks.py  test_download.py  tests.mk  tools.py  travis.mk  util.py  variables.py  wait.py  worker-key.enc
bootstrap/: coverage.py  git-cinnabar.py  git-remote-hg.py  loader.py  loader_common.py  loader_py2.py  loader_py3.py
cinnabar/: Cargo.toml  __init__.py  bdiff.py  build.rs  bundle.py  dag.py  exceptions.py  git.py  githg.py  helper.py  hg.py  lib.rs  remote_helper.py  util.py
cinnabar/cmd/: __init__.py  bundle.py  convert.py  data.py  download.py  fetch.py  fsck.py  python.py  reclone.py  rollback.py  upgrade.py  util.py
cinnabar/hg/: __init__.py  bundle.py  changegroup.py  objects.py  repo.py
coverage/: cov.py  git-cinnabar
git/: __init__.py  util.py
githg/: __init__.py  bundle.py  dag.py  helper.py
helper/: Cargo.toml  GIT-VERSION.mk  build.rs  cinnabar-fast-import.c  cinnabar-fast-import.h  cinnabar-helper.c  cinnabar-helper.h  cinnabar-notes.c  cinnabar-notes.h  cinnabar-util.c  cinnabar-util.h  config.c.patch  csum-file.c.patch  curl-compat.c  diff.c.patch  fast-import.c.patch  helper.mk  hg-bundle.c  hg-bundle.h  hg-connect-http.c  hg-connect-internal.h  hg-connect-stdio.c  hg-connect.c  hg-connect.h  hg-data.c  hg-data.h  hg_bundle.rs  hg_connect.rs  hg_connect_http.rs  hg_connect_stdio.rs  hg_data.rs  http.c.patch  libc.rs  libcinnabar.rs  libgit.rs  main.rs  notes.c.patch  object-file.c.patch  oid.rs  packfile.c.patch  (+10 more)
hg/: cinnabarclone.py
mercurial/: cinnabarclone.py
src/: build.mk  cinnabar-fast-import.c  cinnabar-fast-import.h  cinnabar-helper.c  cinnabar-helper.h  cinnabar-notes.c  cinnabar-notes.h  commit-reach.c.patch  config.c.patch  credential.c.patch  csum-file.c.patch  curl-compat.c  diff.c.patch  fast-import.c.patch  fscache.c.patch  graft.rs  helper.mk  hg-bundle.c  hg-bundle.h  hg-connect-stdio.c  hg-connect.h  hg-data.c  hg-data.h  hg_bundle.rs  hg_connect.rs  hg_connect_http.rs  hg_connect_stdio.rs  hg_data.rs  http.c.patch  libc.rs  libcinnabar.rs  libgit.rs  logging.rs  main.rs  mingw.c  mingw.c.patch  notes.c.patch  object-file.c.patch  oid.rs  packfile.c.patch  (+13 more)
src/cinnabar/: changeset.rs  file.rs  manifest.rs  mod.rs
src/git/: blob.rs  commit.rs  mod.rs  tree.rs
src/hg/: changeset.rs  file.rs  manifest.rs  mod.rs
src/mingw/: NTSecAPI.h
tests/: casefolding.t  cinnabarclone.t  cmd.py  conflicts.t  dag.py  git-http-backend-workaround.sed  githg.py  hg_objects.py  ls-remote.t  notes.py  push-refs.t  push.t  pushcrash.t  pushreject.t  rollback.t  store.py  tags.t  topic.t  util.py
