# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "git-cinnabar"
version = "0.7.0-b"
description = "git remote helper to interact with mercurial repositories"
authors = ["Mike Hommey <mh@glandium.org>"]
edition = "2021"
license = "MPL-2.0 AND GPL-2.0"
repository = "https://github.com/glandium/git-cinnabar"
rust-version = "1.75.0"
include = [
  "/src",
  "/MPL-2.0",
  "/build.rs",
  "/.cargo",
  "/git-core/COPYING",
  "/git-core/LGPL-2.1",
  "/git-core/Makefile",
  "/git-core/detect-compiler",
  "/git-core/GIT-VERSION-GEN",
  "/git-core/*.mak*",
  "/git-core/**/*.c",
  "/git-core/**/*.h",
  "!/git-core/t/**",
]

[dependencies]
array-init = "2.0.1"
backtrace = "0.3"
bit-vec = "0.8"
bitflags = "2"
bzip2 = "0.4"
byteorder = "1"
cfg-if = "1"
cstr = "0.2.10"
digest = "0.10"
either = "1"
getset = "0.1"
hex = "0.4"
hex-literal = "0.4"
indexmap = "2"
itertools = "0.13"
libc = "0.2"
once_cell = "1.13"
percent-encoding = "2"
rand = "0.8"
semver = "1.0"
sha1 = "0.10"
tee = "0.1"
tempfile = "3"
typenum = "1"
url = "2"

[dependencies.bstr]
version = "1"
default-features = false
features = ["std"]

[dependencies.clap]
version = "4.2"
features = ["cargo", "derive"]

[dependencies.concat_const]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.curl-sys]
version = "0.4"
default-features = false
features = ["ssl", "static-curl"]

[target.'cfg(not(windows))'.dependencies.curl-sys]
version = "0.4"
default-features = false

[dependencies.derive_more]
version = "1"
default-features = false
features = ["deref", "display", "debug", "from", "try_into"]

[dependencies.flate2]
version = "1"
default-features = false
features = ["zlib"]

[dependencies.git-version]
version = "0.3"
optional = true

[target.'cfg(windows)'.dependencies.libz-sys]
version = "1"
features = ["static"]

[target.'cfg(not(windows))'.dependencies.libz-sys]
version = "1"

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.lru]
version = "0.12"
default-features = false

[dependencies.mio]
version = "1"
features = ["os-ext", "os-poll"]

[dependencies.regex]
version = "1"
default-features = false
features = ["std"]

[dependencies.shared_child]
version = "1.0"
optional = true

[target.'cfg(not(windows))'.dependencies.tar]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation"]

[target.'cfg(not(windows))'.dependencies.xz2]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.zip]
version = "2"
default-features = false
features = ["deflate-zlib"]
optional = true

[dependencies.zstd]
version = "0.13"
default-features = false

[build-dependencies]
cc = "1.0.46"
itertools = "0.13"
make-cmd = "0.1"
target = "2.0"
syn = { version = "2", features = ["full"] }  # git-version fails to parse inner macros without this.

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
panic = "abort"
debug = true

[profile.dev]
panic = "abort"

[features]
default = ["full-version", "version-check"]
full-version = ["dep:concat_const", "dep:git-version"]
# Check and report when a new version is available.
version-check = ["shared_child"]
# Download and apply new versions.
self-update = ["shared_child", "dep:concat_const", "dep:tar", "dep:xz2", "dep:zip", "windows-sys/Win32_System_Threading"]

# Development features

# Create compile_commands.json for IDE integration.
compile_commands = []
# Enable libgit development options.
gitdev = []
