# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "git-cinnabar"
version = "0.6.0-a"
authors = ["Mike Hommey <mh@glandium.org>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/glandium/git-cinnabar"
publish = false
build = "build.rs"

[[bin]]
name = "git-cinnabar-helper"
path = "main.rs"

[dependencies]
bstr = "0.2"
cstr = "0.1"
either = "1"
hex = "0.4"
itertools = "0.8"
libc = "0.2"
percent-encoding = "2"
sha-1 = "0.8"
tempfile = "3"
url = "2"

[dependencies.curl-sys]
version = "0.4"
default-features = false

[dependencies.flate2]
version = "1"
default-features = false
features = ["zlib"]

[dependencies.libz-sys]
version = "1"
features = ["static"]

[build-dependencies]
itertools = "0.8"
make-cmd = "0.1"
target = "1.0"

[profile.release]
codegen-units = 1
debug = true
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
