# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "git-cinnabar"
version = "0.6.0-a"
authors = ["Mike Hommey <mh@glandium.org>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/glandium/git-cinnabar"
publish = false
build = "build.rs"

[[bin]]
name = "git-cinnabar-helper"
path = "main.rs"

[dependencies]
all_asserts = "2"
bstr = "0.2"
bzip2 = "0.4"
byteorder = "1"
cstr = "0.2"
derivative = "2"
derive_more = "0.99"
digest = "0.9"
either = "1"
getset = "0.1"
hex = "0.4"
itertools = "0.9"
libc = "0.2"
once_cell = "1"
percent-encoding = "2"
replace_with = "0.1"
sha-1 = "0.9"
structopt = "0.3"
tempfile = "3"
typenum = "1"
url = "2"
zstd = "0.5"

[dependencies.curl-sys]
version = "0.4"
default-features = false

[dependencies.flate2]
version = "1"
default-features = false
features = ["zlib"]

[dependencies.libz-sys]
version = "1"
features = ["static"]

[dependencies.regex]
version = "1"
default-features = false
features = ["std"]

[build-dependencies]
itertools = "0.9"
make-cmd = "0.1"
target = "1.0"

[profile.release]
codegen-units = 1
debug = true
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
